infrastructure/gatekeeper/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-system
  labels:
    app.kubernetes.io/name: gatekeeper
    admission.gatekeeper.sh/ignore: "no-self-managing"
