infrastructure/gatekeeper/policy-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-policy-manager
  namespace: gatekeeper-system
  labels:
    app: gatekeeper-policy-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatekeeper-policy-manager
  template:
    metadata:
      labels:
        app: gatekeeper-policy-manager
    spec:
      serviceAccountName: gatekeeper-policy-manager
      containers:
        - name: policy-manager
          image: quay.io/sighup/gatekeeper-policy-manager:v1.0.13
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-policy-manager
  namespace: gatekeeper-system
  labels:
    app: gatekeeper-policy-manager
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: gatekeeper-policy-manager
